# OmniDirectionalVehicle

./: CMakeLists.txt  OmniDirectionalVehicle.ioc  README.md  implementation_plan.md
01-BSP/: CMakeLists.txt
02-Libraries/: CMakeLists.txt
02-Libraries/02_1-Common/DWT_delay/: CMakeLists.txt  DWT_delay.c  DWT_delay.h
02-Libraries/02_2-ThirdParty/SEGGER/: CMakeLists.txt
02-Libraries/02_2-ThirdParty/elog/: CMakeLists.txt
02-Libraries/02_2-ThirdParty/elog/src/: elog.c  elog_port.c
03-Algorithms/: CMakeLists.txt  README.md
03-Algorithms/MotorDriver/: CMakeLists.txt
03-Algorithms/MotorDriver/inc/: motor_driver_interface.h
03-Algorithms/MotorDriver/src/: motor_driver_interface.c
03-Algorithms/OmniDirectionalVehicle/: CMakeLists.txt  README.md
03-Algorithms/OmniDirectionalVehicle/inc/: mecanum_kinematics.h  omni_motor_driver_interface.h  omni_types.h  omni_vehicle_controller.h  omni_vehicle_port.h
03-Algorithms/OmniDirectionalVehicle/src/: mecanum_kinematics.c  omni_motor_driver_interface.c  omni_vehicle_controller.c  omni_vehicle_port.c
03-Algorithms/OmniSolve/: CMakeLists.txt
03-Algorithms/OmniSolve/inc/: mecanum_kinematics.h  omni_solve_types.h
03-Algorithms/OmniSolve/src/: mecanum_kinematics.c
03-Algorithms/OmniVehicleControl/: CMakeLists.txt
03-Algorithms/OmniVehicleControl/inc/: omni_vehicle_control.h
03-Algorithms/OmniVehicleControl/src/: omni_vehicle_control.c
03-Algorithms/PID/: CMakeLists.txt
03-Algorithms/PID/inc/: pid_controller.h
03-Algorithms/PID/src/: pid_controller.c
03-Algorithms/Velocity_PID/: CMakeLists.txt
03-Algorithms/Velocity_PID/inc/: pid_controller.h
03-Algorithms/Velocity_PID/src/: pid_controller.c
